Inclusão do serviço de crud de telefones.

--- a/contacts-ddd-application/pom.xml
+++ b/contacts-ddd-application/pom.xml
@@ -22,6 +22,12 @@
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 
+		<dependency>
+			<groupId>net.sf.dozer</groupId>
+			<artifactId>dozer</artifactId>
+			<version>5.5.1</version>
+		</dependency>
+
 	</dependencies>
 
 </project>
