--- a/contacts-ddd-domain/pom.xml
+++ b/contacts-ddd-domain/pom.xml
@@ -15,6 +15,14 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 			<version>2.2.4.RELEASE</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-annotations</artifactId>
+			<version>2.10.2</version>
+		</dependency>
+
 	</dependencies>
+
 
 </project>
