Inclusão do Swagger para documentação da api. Ajuste no mapeamento do json para não gerar recursão infinita.

--- a/contacts-ddd-api/pom.xml
+++ b/contacts-ddd-api/pom.xml
@@ -10,7 +10,7 @@
 	<artifactId>contacts-ddd-api</artifactId>
 
 	<dependencies>
-	
+
 		<dependency>
 			<groupId>br.com.rodrigo.contacts</groupId>
 			<artifactId>contacts-ddd-application</artifactId>
@@ -27,6 +27,19 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 			<version>2.2.4.RELEASE</version>
+		</dependency>
+
+		<!-- SWAGGER -->
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.9.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>2.9.2</version>
 		</dependency>
 
 	</dependencies>
