Rodando o projeto no Ubuntu

--- a/contacts-ddd-api/src/main/resources/application.properties
+++ b/contacts-ddd-api/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Database
 db.driver: com.mysql.jdbc.Driver
 db.url: jdbc:mysql://localhost:3306/contacts?createDatabaseIfNotExist=true&serverTimezone=UTC
-db.username: root
+db.username: admin
 db.password: MyNewPass
 
 # Hibernate
