--- a/contacts-ddd-api/pom.xml
+++ b/contacts-ddd-api/pom.xml
@@ -29,6 +29,12 @@
 			<version>2.2.4.RELEASE</version>
 		</dependency>
 
+		<dependency>
+			<groupId>jakarta.xml.bind</groupId>
+			<artifactId>jakarta.xml.bind-api</artifactId>
+			<version>2.3.2</version>
+		</dependency>
+
 		<!-- SWAGGER -->
 		<dependency>
 			<groupId>io.springfox</groupId>
