--- a/contacts-ddd-api/src/main/resources/application.properties
+++ b/contacts-ddd-api/src/main/resources/application.properties
@@ -9,3 +9,6 @@ hibernate.dialect: org.hibernate.dialect.MySQL5Dialect
 hibernate.show_sql: true
 hibernate.hbm2ddl.auto: update
 entitymanager.packagesToScan: br.com.rodrigo.contacts
+
+#Server
+server.port: 8051
