--- a/contacts-ddd-api/src/main/resources/application.properties
+++ b/contacts-ddd-api/src/main/resources/application.properties
@@ -5,7 +5,7 @@ db.username: admin
 db.password: MyNewPass
 
 # Hibernate
-hibernate.dialect: org.hibernate.dialect.MySQL5Dialect
+hibernate.dialect: org.hibernate.dialect.MySQL5InnoDBDialect
 hibernate.show_sql: true
 hibernate.hbm2ddl.auto: update
 entitymanager.packagesToScan: br.com.rodrigo.contacts
