--- a/contacts-ddd-portal/ClientApp/package.json
+++ b/contacts-ddd-portal/ClientApp/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~9.0.7",
     "@types/jquery": "^3.3.34",
     "bootstrap": "^4.3.1",
+    "datatables.net-bs4": "^1.10.20",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
     "popper.js": "^1.16.1",
