--- a/contacts-ddd-portal/ClientApp/package.json
+++ b/contacts-ddd-portal/ClientApp/package.json
@@ -24,6 +24,7 @@
     "datatables.net-bs4": "^1.10.20",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
+    "jwt-decode": "^2.2.0",
     "popper.js": "^1.16.1",
     "rxjs": "^6.5.5",
     "tslib": "^1.10.0",
