Verification token on signup

--- a/contacts-ddd-api/src/main/resources/application.properties
+++ b/contacts-ddd-api/src/main/resources/application.properties
@@ -12,3 +12,15 @@ entitymanager.packagesToScan: br.com.rodrigo.contacts
 
 #Server
 server.port: 8051
+
+#E-mail
+mail.host=smtp.gmail.com
+mail.port=587
+
+mail.username=rodrigod1987@gmail.com
+mail.password=iuyiniuatojjimww
+
+mail.transport.protocol=smtp
+mail.smtp.auth=true
+mail.smtp.starttls.enable=true
+mail.debug=true
