--- a/contacts-ddd-api/pom.xml
+++ b/contacts-ddd-api/pom.xml
@@ -46,6 +46,12 @@
 			<version>${spring.boot.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<version>${spring.boot.version}</version>
+		</dependency>
+
 
 		<!-- JSON WEB TOKEN -->
 		<dependency>
