Including validation page to complete sign up register.

--- a/contacts-ddd-api/src/main/resources/application.properties
+++ b/contacts-ddd-api/src/main/resources/application.properties
@@ -24,3 +24,6 @@ mail.transport.protocol=smtp
 mail.smtp.auth=true
 mail.smtp.starttls.enable=true
 mail.debug=true
+
+#Client Address
+client.host=http://localhost:4200/#/
