--- a/contacts-ddd-portal/ClientApp/package.json
+++ b/contacts-ddd-portal/ClientApp/package.json
@@ -19,15 +19,16 @@
     "@angular/platform-browser": "~9.0.7",
     "@angular/platform-browser-dynamic": "~9.0.7",
     "@angular/router": "~9.0.7",
-    "@types/jquery": "^3.3.34",
-    "bootstrap": "^4.3.1",
-    "datatables.net-bs4": "^1.10.20",
+    "@types/jquery": "^3.5.0",
+    "bootstrap": "^4.5.0",
+    "datatables.net-bs4": "^1.10.21",
     "font-awesome": "^4.7.0",
-    "jquery": "^3.4.1",
+    "jquery": "^3.5.1",
     "jwt-decode": "^2.2.0",
     "popper.js": "^1.16.1",
     "rxjs": "^6.5.5",
-    "tslib": "^1.10.0",
+    "stacktrace-js": "^2.0.2",
+    "tslib": "^1.13.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
@@ -35,9 +36,9 @@
     "@angular/cli": "~9.0.7",
     "@angular/compiler-cli": "~9.0.7",
     "@angular/language-service": "~9.0.7",
-    "@types/jasmine": "^3.5.10",
+    "@types/jasmine": "^3.5.11",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.12.34",
+    "@types/node": "^12.12.47",
     "codelyzer": "^5.2.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -45,8 +46,8 @@
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.5.3",
-    "protractor": "~5.4.3",
+    "karma-jasmine-html-reporter": "^1.5.4",
+    "protractor": "^5.4.4",
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
     "typescript": "~3.7.5"
