--- a/contacts-ddd-api/pom.xml
+++ b/contacts-ddd-api/pom.xml
@@ -9,23 +9,7 @@
 	</parent>
 	<artifactId>contacts-ddd-api</artifactId>
 
-	<properties>
-		<spring.boot.version>2.2.4.RELEASE</spring.boot.version>
-	</properties>
-
 	<dependencies>
-
-		<dependency>
-			<groupId>br.com.rodrigo.contacts</groupId>
-			<artifactId>contacts-ddd-application</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
-
-		<dependency>
-			<groupId>br.com.rodrigo.contacts</groupId>
-			<artifactId>contacts-ddd-domain</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
 
 		<!-- SPRING -->
 		<dependency>
@@ -51,7 +35,18 @@
 			<artifactId>spring-boot-devtools</artifactId>
 			<version>${spring.boot.version}</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-commons</artifactId>
+			<version>${spring.boot.version}</version>
+		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+			<version>${spring.boot.version}</version>
+		</dependency>
 
 		<!-- JSON WEB TOKEN -->
 		<dependency>
@@ -103,6 +98,26 @@
 			<groupId>jakarta.xml.bind</groupId>
 			<artifactId>jakarta.xml.bind-api</artifactId>
 			<version>2.3.2</version>
+		</dependency>
+		
+		<!-- MYSQL -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.18</version>
+		</dependency>
+		
+		<!-- OTHER -->
+		<dependency>
+			<groupId>net.sf.dozer</groupId>
+			<artifactId>dozer</artifactId>
+			<version>5.5.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-annotations</artifactId>
+			<version>2.10.2</version>
 		</dependency>
 
 	</dependencies>
