--- a/contacts-ddd-api/src/main/resources/application-dev.properties
+++ b/contacts-ddd-api/src/main/resources/application-dev.properties
@@ -14,13 +14,10 @@ entitymanager.packagesToScan: br.com.rodrigo.contacts
 mail.host=smtp.gmail.com
 mail.port=587
 
-mail.username=rodrigod1987@gmail.com
-mail.password=iuyiniuatojjimww
+mail.username=contacts.ddd.suporte@gmail.com
+mail.password=qkvvqvcjdwaigykn
 
 mail.transport.protocol=smtp
 mail.smtp.auth=true
 mail.smtp.starttls.enable=true
 mail.debug=true
-
-#Client Address
-client.host=http://localhost:8080/
