--- a/contacts-ddd-api/src/main/resources/application-prod.properties
+++ b/contacts-ddd-api/src/main/resources/application-prod.properties
@@ -1,8 +1,5 @@
 # Database
 db.driver: com.mysql.jdbc.Driver
-db.url: jdbc:mysql://localhost:3306/contacts?createDatabaseIfNotExist=true&serverTimezone=UTC
-db.username: admin
-db.password: MyNewPass
 
 # Hibernate
 hibernate.dialect: org.hibernate.dialect.MySQL5InnoDBDialect
@@ -10,20 +7,14 @@ hibernate.show_sql: true
 hibernate.hbm2ddl.auto: update
 entitymanager.packagesToScan: br.com.rodrigo.contacts
 
-#Server
-server.port: 8051
-
 #E-mail
 mail.host=smtp.gmail.com
 mail.port=587
 
-mail.username=rodrigod1987@gmail.com
-mail.password=iuyiniuatojjimww
+mail.username=contacts.ddd.suporte@gmail.com
+mail.password=qkvvqvcjdwaigykn
 
 mail.transport.protocol=smtp
 mail.smtp.auth=true
 mail.smtp.starttls.enable=true
 mail.debug=true
-
-#Client Address
-client.host=http://localhost:4200/#/
