--- a/contacts-ddd-api/src/main/resources/application-prod.properties
+++ b/contacts-ddd-api/src/main/resources/application-prod.properties
@@ -8,13 +8,13 @@ hibernate.hbm2ddl.auto: update
 entitymanager.packagesToScan: br.com.rodrigo.contacts
 
 #E-mail
-mail.host=smtp.gmail.com
-mail.port=587
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
 
-mail.username=contacts.ddd.suporte@gmail.com
-mail.password=qkvvqvcjdwaigykn
+spring.mail.username=contacts.ddd.suporte@gmail.com
+spring.mail.password=qkvvqvcjdwaigykn
 
-mail.transport.protocol=smtp
-mail.smtp.auth=true
-mail.smtp.starttls.enable=true
-mail.debug=true
+spring.mail.transport.protocol=smtp
+spring.mail.smtp.auth=true
+spring.mail.smtp.starttls.enable=true
+spring.mail.debug=true
