Adjusting mail properties.

--- a/contacts-ddd-api/src/main/resources/application-prod.properties
+++ b/contacts-ddd-api/src/main/resources/application-prod.properties
@@ -8,13 +8,8 @@ hibernate.hbm2ddl.auto: update
 entitymanager.packagesToScan: br.com.rodrigo.contacts
 
 #E-mail
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
+mail.host=smtp.gmail.com
+mail.port=587
 
-spring.mail.username=contacts.ddd.suporte@gmail.com
-spring.mail.password=qkvvqvcjdwaigykn
-
-spring.mail.transport.protocol=smtp
-spring.mail.smtp.auth=true
-spring.mail.smtp.starttls.enable=true
-spring.mail.debug=true
+mail.username=contacts.ddd.suporte@gmail.com
+mail.password=qkvvqvcjdwaigykn
