Adjusting database driver

--- a/contacts-ddd-api/src/main/resources/application-prod.properties
+++ b/contacts-ddd-api/src/main/resources/application-prod.properties
@@ -1,15 +1,8 @@
 # Database
-db.driver: com.mysql.jdbc.Driver
+db.driver: org.postgresql.Driver
 
 # Hibernate
-hibernate.dialect: org.hibernate.dialect.MySQL5InnoDBDialect
-hibernate.show_sql: true
+hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
+hibernate.show_sql: false
 hibernate.hbm2ddl.auto: update
 entitymanager.packagesToScan: br.com.rodrigo.contacts
-
-#E-mail
-mail.host=smtp.gmail.com
-mail.port=587
-
-mail.username=contacts.ddd.suporte@gmail.com
-mail.password=qkvvqvcjdwaigykn
