Adjusting database creating

--- a/contacts-ddd-api/src/main/resources/application-prod.properties
+++ b/contacts-ddd-api/src/main/resources/application-prod.properties
@@ -4,5 +4,5 @@ db.driver: org.postgresql.Driver
 # Hibernate
 hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
 hibernate.show_sql: false
-hibernate.hbm2ddl.auto: create
+hibernate.hbm2ddl.auto: create-drop
 entitymanager.packagesToScan: br.com.rodrigo.contacts
