--- a/contacts-ddd-api/src/main/resources/application-dev.properties
+++ b/contacts-ddd-api/src/main/resources/application-dev.properties
@@ -1,11 +1,9 @@
 # Database
-db.driver: com.mysql.jdbc.Driver
-db.url: jdbc:mysql://localhost:3306/contacts?createDatabaseIfNotExist=true&serverTimezone=UTC
-db.username: admin
-db.password: MyNewPass
+db.driver: org.postgresql.Driver
+db.url: postgres://postgres:11affc19cced7343a84cfac65eebdf1c@localhost:5432/contacts_dev
 
 # Hibernate
-hibernate.dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
 hibernate.show_sql: true
-hibernate.hbm2ddl.auto: update
+hibernate.hbm2ddl.auto: create-drop
 entitymanager.packagesToScan: br.com.rodrigo.contacts
