Adjusting database properties to update

--- a/contacts-ddd-api/src/main/resources/application-dev.properties
+++ b/contacts-ddd-api/src/main/resources/application-dev.properties
@@ -5,5 +5,5 @@ db.url: postgres://postgres:11affc19cced7343a84cfac65eebdf1c@localhost:5432/cont
 # Hibernate
 hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
 hibernate.show_sql: true
-hibernate.hbm2ddl.auto: create-drop
+hibernate.hbm2ddl.auto: update
 entitymanager.packagesToScan: br.com.rodrigo.contacts
