--- a/contacts-ddd-api/src/main/resources/application-dev.properties
+++ b/contacts-ddd-api/src/main/resources/application-dev.properties
@@ -1,9 +1,9 @@
 # Database
-db.driver: org.postgresql.Driver
-db.url: postgres://postgres:11affc19cced7343a84cfac65eebdf1c@localhost:5432/contacts_dev
+db.driver:org.postgresql.Driver
+db.url:postgres://postgres:11affc19cced7343a84cfac65eebdf1c@localhost:5432/contacts_dev
 
 # Hibernate
-hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
-hibernate.show_sql: true
-hibernate.hbm2ddl.auto: update
-entitymanager.packagesToScan: br.com.rodrigo.contacts
+hibernate.dialect:org.hibernate.dialect.PostgreSQLDialect
+hibernate.show_sql:true
+hibernate.hbm2ddl.auto:none
+entitymanager.packagesToScan:br.com.rodrigo.contacts
