--- a/contacts-ddd-api/src/main/resources/application-dev.properties
+++ b/contacts-ddd-api/src/main/resources/application-dev.properties
@@ -5,5 +5,5 @@ db.url:postgres://postgres:11affc19cced7343a84cfac65eebdf1c@localhost:5432/conta
 # Hibernate
 hibernate.dialect:org.hibernate.dialect.PostgreSQLDialect
 hibernate.show_sql:true
-hibernate.hbm2ddl.auto:update
+hibernate.hbm2ddl.auto:none
 entitymanager.packagesToScan:br.com.rodrigo.contacts
